--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,12 @@
     max-width: 50%;
     height: 200px;
     border: 5px solid black;
+    display: flex;
+}
+
+.person {
+    background-color: pink;
+    border-radius: 50%;
+    width: 25%;
+    height: 50%;
 }
