--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     width: 50%;
     height: 200px;
     border: 5px solid black;
+    padding: 2rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -11,6 +12,6 @@
 .person {
     background-color: pink;
     border-radius: 50%;
-    width: 10rem;
+    width: 15rem;
     height: 10rem;
 }
