--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,19 @@
+body {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container {
-    width: 50%;
-    height: 500%;
+    width: 60%;
+    height: 40%;
     border: 5px solid black;
     padding: 2rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .person {
